# bigfatbench

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
include/bfb/: benchmark.hpp  benchmark.inl
include/bfb/utils/: chrono.hpp  moving_average.hpp  print_helpers.hpp
src/: benchmark.cpp
